chore: add params to docs
